# qservice

./: .gitignore  CMakeLists.txt  README.md
include/qservice/: httpdefs.hpp  httpreq.hpp  httpres.hpp  message.hpp  parser.hpp  qservice.hpp
src/: CMakeLists.txt
src/common/: connection.cpp  connection.hpp  http_parser.cpp  http_parser.hpp  io.cpp  io.hpp
src/parser/: parser.cpp
src/server/: httpserver.hpp  qservice.cpp
src/server/impl/: iqservice.cpp  iqservice.hpp  qservice_epoll.cpp  qservice_epoll.hpp  qservice_factory.cpp  qservice_factory.hpp  qservice_mt.cpp  qservice_mt.hpp  qservice_select.cpp  qservice_select.hpp
src/utils/: threadpool.cpp  threadpool.hpp  utils.hpp
tests/: CMakeLists.txt  first_test.cpp  qservice_test.cpp
